--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,215 @@
-.App {
+/* 
+  1. Utility
+  2. Header
+  3. Input Box
+  4. Output Box
+  5. List Item
+  6. Footer
+
+*/
+
+/********************* UTILITY *********************/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
+:root {
+  --primary-colour: #0000FF;
+  --secondary-color: #e8f6ff;
+  --background-color: #ececec;
+  --white-color: #fff;
+  --black-color: #000;
+
+}
+
+body {
+  background-color: var(--secondary-color);
+}
+
+.container {
+  max-width: 380px;
+  background-color: var(--background-color);
+  box-shadow: 0 1px 5px 0 rgb(0 0 0 / 20%);
+  border-radius: 6px;
+  margin: 1rem auto;
+  padding: 2rem 1rem 0rem;
+}
+
+.text-center {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/********************* HEADER *********************/
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/********************* INPUT BOX *********************/
+.input-box {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 2rem 0;
 }
 
-.App-link {
-  color: #61dafb;
+.input-box input {
+  width: 100%;
+  border-radius: 6px;
+  font-size: 16px;
+  padding: 10px;
+  margin-bottom: 8px;
+  border: none;
+  box-shadow: 0 1px 5px 0 rgb(0 0 0 / 20%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.input-box button[type=submit] {
+  border-radius: 6px;
+  padding: 8px 20px;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  background-color: var(--primary-colour);
+  color: var(--white-color);
+  border: 2px solid var(--primary-colour);
+  transition: all 0.25s ease-in-out;
+}
+
+.input-box button[type=submit]:hover {
+  background-color: var(--white-color);
+  color: var(--primary-colour);
+}
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+  margin: 1rem 0;
+}
+.checkbox-container input {
+  margin: 0 1rem;
+}
+
+.checkbox-container input[type="checkbox"] {
+  position: relative;
+  width: 80px;
+  height: 40px;
+  -webkit-appearance: none;
+  background-color: #fff;
+  outline: none;
+  border-radius: 6px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.6);
+  border: none;
+  cursor: pointer;
+  transition: 0.5s;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+.checkbox-container input[type="checkbox"]:before {
+  content: '';
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  border-radius: 6px;
+  top: 4px;
+  left: 5px;
+  background-color: var(--primary-colour);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+.checkbox-container input:checked[type="checkbox"]:before {
+  left: 42px;
+}
+
+.error-message {
+  height: 16px;
+  color: red;
+}
+
+/********************* OUTPUT BOX *********************/
+.output-box {
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.output-box h2 {
+  margin-bottom: 1rem;
+}
+
+.output-box button[type=submit] {
+  border-radius: 6px;
+  padding: 8px 20px;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  background-color: var(--primary-colour);
+  color: var(--white-color);
+  border: 2px solid var(--primary-colour);
+  transition: all 0.25s ease-in-out;
+  margin-top: -4rem;
+  margin-bottom: 4rem;
+}
+
+.output-box button[type=submit]:hover {
+  background-color: var(--white-color);
+  color: var(--primary-colour);
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 2rem;
+  box-shadow: 0 1px 5px 0 rgb(0 0 0 / 20%);
+  border-radius: 6px;
+}
+
+table tr:nth-child(even) {
+  background-color: var(--white-color);
+}
+
+table tr:hover {
+  background-color: var(--secondary-color);
+}
+
+table th {
+  background-color: var(--white-color);
+  padding: 6px 0 6px 6px;
+}
+
+table td {
+  padding: 6px 0 6px 6px;
+  font-size: 14px;
+}
+
+table td:first-child {
+  width: 181px;
+}
+
+table td:nth-child(2) {
+  width: 107px;
+}
+
+.icon {
+  max-width: 20px;
+  cursor: pointer;
+}
+
+/********************* LIST ITEM *********************/
+
+/********************* FOOTER *********************/
+footer {
+  padding-bottom: 0.5rem;
+}
+
+footer a {
+  text-decoration: none;
+  color: var(--primary-colour);
+}
+
+footer a:hover {
+  opacity: 70%;
 }
