added rounded corners to table

--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,7 @@ table {
   margin-bottom: 2rem;
   box-shadow: 0 1px 5px 0 rgb(0 0 0 / 20%);
   border-radius: 6px;
+  overflow: hidden;
 }
 
 table tr:nth-child(even) {
